# FdcPythonMcpServer

./: README.md  main.py  pyproject.toml
tools/: fdc_tool.py  hello_tool.py
