[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.1",
]
[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-fdc"
version = "0.1.0"
description = "Python implementation of McpServerFdc"
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "requests",
    "click",
]